src/objects/ID_Card_Application__c.object
<CustomObject>
    <fields>
        <fullName>Photo__c</fullName>
        <description>Filename of the agent&apos;s photo</description>
        <label>Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Card_Fee__c</fullName>
        <description>Fee for printing the physical card.</description>
        <label>Printing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <formula>CASE(Position_in_Current_Agency__c,
&quot;*CNV DATA* NOT DEFINED&quot;,&quot;-&quot;,
&quot;SHAREHOLDER&quot;,&quot;C&quot;,
&quot;Shareholder&quot;,&quot;C&quot;,
&quot;EMPLOYEE&quot;,&quot;E&quot;,
&quot;Employee&quot;,&quot;E&quot;,
&quot;INDEPENDENT CONSULTANT&quot;,&quot;I&quot;,
&quot;INDEPENDENT CONSULTANT/BROKER&quot;,&quot;I&quot;,
&quot;Independent Consultant/Broker&quot;,&quot;I&quot;,
&quot;BROKER&quot;,&quot;I&quot;,
&quot;MANAGER&quot;,&quot;M&quot;,
&quot;Manager&quot;,&quot;M&quot;,
&quot;NATIONAL DIRECTOR&quot;,&quot;N&quot;,
&quot;Director&quot;,&quot;N&quot;,
&quot;OUTSIDE SALES&quot;,&quot;O&quot;,
&quot;PARTNER&quot;,&quot;P&quot;,
&quot;Partner&quot;,&quot;P&quot;,
&quot;QUALIFIED TICKETING AGENT&quot;,&quot;Q&quot;,
&quot;REGIONAL DIRECTOR&quot;,&quot;R&quot;,
&quot;OWNER&quot;,&quot;S&quot;,
&quot;Sole Owner&quot;,&quot;S&quot;,
&quot;PRESIDENT&quot;,&quot;T&quot;,
&quot;SPOUSE&quot;,&quot;U&quot;,
&quot;RETIRED EMPLOYEE&quot;,&quot;V&quot;,
&quot;SPOUSE OF RETIRED EMPLOYEE&quot;,&quot;W&quot;,
&quot;OTHER&quot;,&quot;X&quot;,
&quot;SECRETARY GENERAL&quot;,&quot;Z&quot;,
&quot; &quot;)</formula>
        <label>Position Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_in_Current_Agency__c</fullName>
        <label>Position in Current Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Independent Consultant/Broker</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Sole Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Office__c</fullName>
        <label>Regional Office</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_From_Replace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal From Replace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Confirmation_Validation_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Confirmation Validation Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Preferred_Language__c</fullName>
        <label>Selected/Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Application_Processing_Step__c</fullName>
        <inlineHelpText>This field is used by Batch on Mass Application to know what is current process step</inlineHelpText>
        <label>Single Application Processing Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for processing</fullName>
                    <default>true</default>
                    <label>Waiting for processing</label>
                </value>
                <value>
                    <fullName>In Queue for processing</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitation_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Solicitation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Agency_Month__c</fullName>
        <description>Start date of employment with above agency</description>
        <label>Start Month in the Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Agency_Year__c</fullName>
        <description>Start date (year) of employment for above agency</description>
        <inlineHelpText>Numeric value. (YYYY format)</inlineHelpText>
        <label>Start Year in the Agency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Industry__c</fullName>
        <description>Start date of employment in the industry</description>
        <inlineHelpText>YYYY</inlineHelpText>
        <label>Start Year in the Industry</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_1_Name__c</fullName>
        <label>Tax 1 Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_1_Value__c</fullName>
        <label>Tax 1 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_2_Name__c</fullName>
        <label>Tax 2 Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_2_Value__c</fullName>
        <label>Tax 2 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Time_Stamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms and Conditions Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_application__c</fullName>
        <label>Type of application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UIR__c</fullName>
        <label>UIR</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VER_Number__c</fullName>
        <externalId>true</externalId>
        <label>VER#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ID Card Application</label>
    <listViews>
        <fullName>Completed_Paid_ID_Card_Applications</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <columns>Displayed_Name__c</columns>
        <columns>Type_of_application__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Credit_Card_Number__c</columns>
        <columns>Payment_Transaction_Number__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Photo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Terms_and_Conditions_Time_Stamp__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/7/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ID_Card_Application__c.Standard</value>
        </filters>
        <label>All IDCA created last week (Feb 7-14)</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDCardManager</group>
            <group>IDCard_ReadOnly</group>
            <group>IDCard_Standard</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>For_deletion</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Type_of_application__c</columns>
        <columns>Displayed_Name__c</columns>
        <columns>Applicable_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>IDCA-224083</value>
        </filters>
        <label>For specific IDCA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>For_specific_VER</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>VER_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Application_Status__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Type_of_application__c</columns>
        <columns>Displayed_Name__c</columns>
        <columns>Applicable_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VER_Number__c</field>
            <operation>equals</operation>
            <value>5716034821</value>
        </filters>
        <label>For specific VER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDCA_for_new_agent_in_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Displayed_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type_of_application__c</columns>
        <columns>VER_Number__c</columns>
        <columns>UIR__c</columns>
        <columns>Start_Date_Agency_Month__c</columns>
        <columns>Start_Date_Agency_Year__c</columns>
        <columns>Start_Date_Industry__c</columns>
        <columns>IATA_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_application__c</field>
            <operation>equals</operation>
            <value>Replacement</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ID_Card_Application__c.Single_ID_Card_Operation</value>
        </filters>
        <label>IDCA for new agent in Key Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Incomplete_Unpaid_ID_Card_Applications</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_admin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Incomplete/Unpaid ID Card Applications</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDCardManager</group>
            <group>IDCard_ReadOnly</group>
            <group>IDCard_Standard</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IDCA-{00000}</displayFormat>
        <label>ID Card Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Card Applications</pluralLabel>
    <recordTypes>
        <fullName>Mass_Order_Application</fullName>
        <active>true</active>
        <description>This record type is used to define an Application request for mass Id Cqrd operation.</description>
        <label>Mass Order Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_ID_Card_Operation</fullName>
        <active>true</active>
        <description>Default record type for Id Card operation.</description>
        <label>Single ID Card Operation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Record type for all cards on non key account</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IATACode1MustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_numeric_code_previous_employer_1__c ) ) &lt;&gt; VALUE(IATA_numeric_code_previous_employer_1__c)</errorConditionFormula>
        <errorDisplayField>IATA_numeric_code_previous_employer_1__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATACode2MustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_numeric_code_previous_employer_2__c ) ) &lt;&gt; VALUE(IATA_numeric_code_previous_employer_2__c)</errorConditionFormula>
        <errorDisplayField>IATA_numeric_code_previous_employer_2__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATACode3MustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_numeric_code_previous_employer_3__c ) ) &lt;&gt; VALUE(IATA_numeric_code_previous_employer_3__c)</errorConditionFormula>
        <errorDisplayField>IATA_numeric_code_previous_employer_3__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATACode4MustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_numeric_code_previous_employer_4__c ) ) &lt;&gt; VALUE(IATA_numeric_code_previous_employer_4__c)</errorConditionFormula>
        <errorDisplayField>IATA_numeric_code_previous_employer_4__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATACodeMustBeInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_Code__c ) ) &lt;&gt; VALUE(IATA_Code__c )</errorConditionFormula>
        <errorDisplayField>IATA_Code__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( IATA_Code_for_previous_agency__c ) ) &lt;&gt; VALUE( IATA_Code_for_previous_agency__c )</errorConditionFormula>
        <errorDisplayField>IATA_Code_for_previous_agency__c</errorDisplayField>
        <errorMessage>The IATA Code must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateAgencyMustBeInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR(  VALUE(Start_Date_Agency_Year__c) ) &lt;&gt;  VALUE(Start_Date_Agency_Year__c)</errorConditionFormula>
        <errorDisplayField>Start_Date_Agency_Year__c</errorDisplayField>
        <errorMessage>The start year in the agency must be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateIndustryMustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE( Start_Date_Industry__c ) ) &lt;&gt; VALUE(Start_Date_Industry__c)</errorConditionFormula>
        <errorDisplayField>Start_Date_Industry__c</errorDisplayField>
        <errorMessage>The start year in Industry is numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VERMustBeAnInteger</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( VALUE(   SUBSTITUTE (VER_Number__c ,&apos;Z&apos;,&apos;&apos;)  ) ) &lt;&gt; VALUE( SUBSTITUTE (VER_Number__c ,&apos;Z&apos;,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>VER_Number__c</errorDisplayField>
        <errorMessage>The VER# must be numeric.</errorMessage>
    </validationRules>
</CustomObject>